[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/UI/Flight/Stage/Stages.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/UI/Flight/FlightUI.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/Flight/Transfer/Transfers.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/Flight/GeneralData.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/UI/Flight/RotationIndicator.gd" type="Script" id=5]
[ext_resource path="res://scripts/UI/Flight/RocketSelector.gd" type="Script" id=6]
[ext_resource path="res://scenes/UI/Flight/RocketButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/UI/TabSelector.gd" type="Script" id=8]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 0.470588, 0.470588, 0.470588, 0.945098 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flight" type="Tabs" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
drag_to_rearrange_enabled = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="VBoxContainer" parent="Flight"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Flight/Bottom"]
margin_top = 768.0
margin_right = 1600.0
margin_bottom = 782.0
text = "T+20:30.153"
align = 1

[node name="Label2" type="Label" parent="Flight/Bottom"]
margin_top = 786.0
margin_right = 1600.0
margin_bottom = 800.0
text = "min:sec"
align = 1

[node name="HUDRight" type="VBoxContainer" parent="Flight"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="VBoxContainer" parent="Flight/HUDRight"]
margin_right = 200.0
margin_bottom = 50.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Flight/HUDRight/Time"]
margin_right = 200.0
margin_bottom = 14.0
text = "Time"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Flight/HUDRight/Time"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 32.0
text = "20:10:45.117"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Flight/HUDRight/Time"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 50.0
text = "2035"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Flight/HUDRight"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 254.0
rect_min_size = Vector2( 200, 200 )
stretch = true
script = ExtResource( 5 )
mesh = NodePath("Viewport/Spatial/MeshInstance")

[node name="Viewport" type="Viewport" parent="Flight/HUDRight/ViewportContainer"]
size = Vector2( 200, 200 )
size_override_stretch = true
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="Flight/HUDRight/ViewportContainer/Viewport"]

[node name="MeshInstance" type="MeshInstance" parent="Flight/HUDRight/ViewportContainer/Viewport/Spatial"]
transform = Transform( -0.056615, -0.298044, -0.847328, -0.125734, 0.84328, -0.288219, 0.889374, 0.100245, -0.0946852, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Camera" type="Camera" parent="Flight/HUDRight/ViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.44784 )
environment = SubResource( 2 )
projection = 1
current = true
size = 4.74952

[node name="VBoxContainer" type="VBoxContainer" parent="Flight/HUDRight"]
margin_top = 258.0
margin_right = 200.0
margin_bottom = 382.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotScrollable" type="VBoxContainer" parent="Flight/HUDRight/VBoxContainer"]
margin_right = 200.0
margin_bottom = 68.0

[node name="GeneralData" parent="Flight/HUDRight/VBoxContainer/NotScrollable" instance=ExtResource( 4 )]
margin_bottom = 68.0

[node name="Scrollable" type="VBoxContainer" parent="Flight/HUDRight/VBoxContainer"]
margin_top = 72.0
margin_right = 200.0
margin_bottom = 124.0

[node name="Stages" parent="Flight/HUDRight/VBoxContainer/Scrollable" instance=ExtResource( 1 )]
margin_right = 200.0
margin_bottom = 24.0

[node name="Transfers" parent="Flight/HUDRight/VBoxContainer/Scrollable" instance=ExtResource( 3 )]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 52.0

[node name="Tabs" type="VBoxContainer" parent="Flight"]
anchor_right = 1.0
margin_right = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabSelector" type="HBoxContainer" parent="Flight/Tabs"]
margin_right = 1400.0
margin_bottom = 20.0
alignment = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Flight/Tabs/TabSelector"]
margin_left = 587.0
margin_right = 812.0
margin_bottom = 20.0
alignment = 1

[node name="Flight" type="Button" parent="Flight/Tabs/TabSelector/HBoxContainer"]
margin_right = 47.0
margin_bottom = 20.0
toggle_mode = true
text = "Flight"

[node name="Map" type="Button" parent="Flight/Tabs/TabSelector/HBoxContainer"]
margin_left = 51.0
margin_right = 90.0
margin_bottom = 20.0
toggle_mode = true
text = "Map"

[node name="Settings" type="Button" parent="Flight/Tabs/TabSelector/HBoxContainer"]
margin_left = 94.0
margin_right = 157.0
margin_bottom = 20.0
toggle_mode = true
text = "Settings"

[node name="ShipInfo" type="Button" parent="Flight/Tabs/TabSelector/HBoxContainer"]
margin_left = 161.0
margin_right = 225.0
margin_bottom = 20.0
toggle_mode = true
text = "ShipInfo"

[node name="ScrollContainer2" type="ScrollContainer" parent="Flight/Tabs"]
margin_top = 24.0
margin_right = 1400.0
margin_bottom = 24.0
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 6 )
rocket_button = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="Flight/Tabs/ScrollContainer2"]

[connection signal="deltav_changed" from="Flight" to="Flight/HUDRight/VBoxContainer/NotScrollable/GeneralData" method="deltav_changed"]
[connection signal="fuel_percentage_changed" from="Flight" to="Flight/HUDRight/VBoxContainer/NotScrollable/GeneralData" method="fuel_percentage_changed"]
[connection signal="height_changed" from="Flight" to="Flight/HUDRight/VBoxContainer/NotScrollable/GeneralData" method="height_changed"]
[connection signal="stage_new" from="Flight" to="Flight/HUDRight/VBoxContainer/Scrollable/Stages" method="stage_new"]
[connection signal="stage_property_changed" from="Flight" to="Flight/HUDRight/VBoxContainer/Scrollable/Stages" method="stage_property_changed"]
[connection signal="transfer_new" from="Flight" to="Flight/HUDRight/VBoxContainer/Scrollable/Transfers" method="transfer_new"]
[connection signal="transfer_property_changed" from="Flight" to="Flight/HUDRight/VBoxContainer/Scrollable/Transfers" method="transfer_property_changed"]
[connection signal="velocity_changed" from="Flight" to="Flight/HUDRight/VBoxContainer/NotScrollable/GeneralData" method="velocity_changed"]
